--- a/Formulario-lore/modal-localidad.html
+++ b/Formulario-lore/modal-localidad.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Localidad</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-toggle="ciudad" data-target="#exampleModal">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ciudad">
             Modal
         </button>
   
@@ -34,11 +34,11 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        ...
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <div class="btn-group-vertical">
+                            <button tipe="button" class="btn btn-dark" data-dismiss="modal">Rosario</button>
+                            <button tipe="button" class="btn btn-dark" data-dismiss="modal">Casilda</button>
+                            <button tipe="button" class="btn btn-dark" data-dismiss="modal">Correa</button>
+                        </div>
                     </div>
                 </div>
             </div>
