--- a/formulario-4.html
+++ b/formulario-4.html
@@ -196,7 +196,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <div class="container-fluid">
+                        <div class="container">
                             <form>
                                 <div class="form-group">
                                     <label for="apellido">Apellido</label>
@@ -231,8 +231,7 @@
                                     <input type="email" class="form-control" id="email">
                                 </div>
                             </form>
-                        </div>
-                    
+                        </div>                    
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
